New changes added 16.07.2024

--- a/test_project/templates/flatpages/knowledge_base.html
+++ b/test_project/templates/flatpages/knowledge_base.html
@@ -7,7 +7,6 @@
 {% block content %}
     <h2>{{ flatpage.title }}</h2>
     <hr>
-    <h3>Наши контакты:</h3>
-{{ flatpage.content }}
-{{ flatpage.content }}
+    <h3>Знания Python:</h3>
+<p><i>{{ flatpage.content }}</i></p>
 {% endblock content %}
