--- a/test_project/templates/flatpages/admin_only.html
+++ b/test_project/templates/flatpages/admin_only.html
@@ -7,7 +7,6 @@
 {% block content %}
     <h2>{{ flatpage.title }}</h2>
     <hr>
-    <h3>Наши контакты:</h3>
-{{ flatpage.content }}
+    <h3>Только для Админа:</h3>
 {{ flatpage.content }}
 {% endblock content %}
