--- a/test_project/templates/flatpages/default.html
+++ b/test_project/templates/flatpages/default.html
@@ -35,6 +35,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/contacts/">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/knowledge_base/">Знания Python</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/admin_only/">Только для админа</a>
+                        </li>
                     </ul>
                 </div>
             </div>
